# Earth-ain-t-Flat_IROS18

./: README.md
CarShape_36/KITTI/mutliView/: CMakeLists.txt  CMakeLists.txt~
CarShape_36/KITTI/mutliView/code/ceres/: costFunctions.hpp  multiViewShapeandPoseAdjuster.cc  problemStructs.hpp  singleViewPoseAdjuster.cc
CarShape_36/KITTI/mutliView/code/matlab/: bbox_ry.m  ceres_output_mutliViewShapeAdjuster.txt  ceres_output_singleViewPoseAdjuster.txt  ceres_output_singleViewShapeAdjuster.txt  ceres_output_singleViewShapeAdjuster_lambdas.txt  ceres_output_singleViewShapeAdjuster_shape.txt  globals.m  makeVideo.m  test.m  visualizeWireframe2D.m  visualizeWireframe2DandSaveImage.m  writeData.m  writeVideo.m  write_inpFile_multiviewadjuster.m  write_inp_pose.m  write_inp_pose_singleView.m  write_inp_shape.m  write_inp_shape_singleView.m
CarShape_36/KITTI/mutliView/code/matlab/initial/: test.m  (+5 more)
CarShape_36/KITTI/mutliView/data/: ceres_input_multiViewAdjuster.txt  ceres_input_singleViewPoseAdjuster.txt  ceres_input_singleViewShapeAdjuster.txt  input_HG.txt  input_Hourglass.txt  keypoints.txt~  keypoints_10_0-50_0.txt  keypoints_11_0-40_0.txt  keypoints_2_95-100_1.txt  keypoints_2frames.txt  keypoints_4_40-55_id2.txt  keypoints_5_180-230_31.txt~  keypoints_5_182-190_12.txt  keypoints_5_186-190_12.txt  keypoints_5_190-230_31.txt  keypoints_5_193-200_17.txt  keypoints_7_150_161.txt~  keypoints_7_151_159.txt  keypoints_98.txt~  keypoints_9_48-62_9.txt  kpLookup_azimuth.mat  kps_3_41_1.txt  meanShape.txt  vectors.txt
CarShape_36/KITTI/mutliView/data/dataHG/: hourglassInput.txt
(+2095 files in other folders)
